이미지 추가 및 map을 이용한 중복 코드 제서

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,9 +1,10 @@
 {
-    "compilerOptions": {
-      "baseUrl": "./src",
-      "paths": {
-        "@components/*": ["./components/*"],
-        "@assets/*": ["./assets/*"],
-      }
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@assets/*": ["./assets/*"],
+      "@components/*": ["./components/*"],
+      "@data/*": ["./data/*"]
     }
   }
+}
