--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,8 @@
     "paths": {
       "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
-      "@data/*": ["./data/*"]
+      "@data/*": ["./data/*"],
+      "@hooks/*": ["./hooks/*"],
     }
   }
 }
